<resources>
    <string name="app_name">LoginRegister</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_here">Already Have An Account? Login Here</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Create a new account? Sign up here</string>
    <string name="title_activity_sidebar">EasyIlmu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin Panel</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Manage Users</string>
    <string name="menu_gallery">View Books</string>
    <string name="add_book">Add Books</string>
    <string name="menu_slideshow">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_user">Name: </string>
</resources>